--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "url": "git+https://github.com/JulianCRA/delaunay2d.git"
   },
   "keywords": [
-    "Delaunay"
+    "Delaunay",
+    "p5",
+    "p5.js",
+    "processing",
+    "delaunator"
   ],
   "author": "JulianCRA",
   "license": "MIT",
@@ -22,9 +26,6 @@
   },
   "homepage": "https://github.com/JulianCRA/delaunay2d#readme",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.2",
-    "babel-preset-env": "^1.7.0",
     "delaunator": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "p5": "^0.7.2",
